--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="tabIconSize">22dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="heightLine">0.5dp</dimen>
+    <dimen name="heightTitle">50dp</dimen>
+
+
 </resources>
