--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,15 @@
     <color name="app_color_5e">#5e5e5e</color>
     <color name="login_color_blue">#3557d9</color>
     <color name="tab_layout_bg">#dce3ff</color>
+
+
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorMain">#F24832</color>
+    <color name="colorLine">#d8d8d8</color>
+    <color name="colorNomal">#333333</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorLight">#6D6D6D</color>
 </resources>
