--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.guoyie.www.delivery.easy.activity.GuideActivity">
     
     <cn.bingoogolapple.bgabanner.BGABanner
-        android:id="@+id/bga_lead"
+        android:id="@+id/bga_guide"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:banner_pointAutoPlayAble="false"/>
 </layout>
