--- a/app/src/main/res/layout/fc_business.xml
+++ b/app/src/main/res/layout/fc_business.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_f1"
         android:orientation="vertical">
 
         <include
@@ -16,14 +19,143 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp">
+            android:orientation="vertical"
+          >
 
-            <TextView
-                android:gravity="center"
-                android:text="我的业务"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_weight="1"
+                android:layout_height="0dp">
+
+                <LinearLayout
+                    android:background="@color/app_color_blue"
+                    android:layout_width="match_parent"
+                    android:layout_weight="2"
+                    android:layout_height="0dp">
+
+                    <cn.bingoogolapple.bgabanner.BGABanner
+                        android:id="@+id/banner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        style="@style/BannerDefaultStyle"
+                        android:layout_margin="25dp"
+                        app:banner_contentBottomMargin="40dp"
+                        app:banner_indicatorGravity="bottom|center_horizontal"
+                        app:banner_isNeedShowIndicatorOnOnlyOnePage="true"
+                        app:banner_isNumberIndicator="false"
+                        app:banner_pointAutoPlayAble="true"
+                        app:banner_pointContainerBackground="@android:color/transparent"
+                        app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
+                        app:banner_transitionEffect="defaultEffect"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1.5"
+                    android:layout_height="0dp">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                           android:orientation="vertical"
+                            android:layout_height="match_parent">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_weight="1"
+                                android:background="@color/app_color_blue"
+                                android:layout_height="0dp"/>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_weight="2"
+                                android:layout_height="0dp"/>
+                        </LinearLayout>
+
+                        <android.support.v7.widget.CardView
+                            android:elevation="100dp"
+                            app:cardBackgroundColor="@color/white"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="5dp"
+                            android:layout_width="match_parent"
+                            android:layout_margin="16dp"
+                            android:layout_height="match_parent">
+
+                            <LinearLayout
+                                android:padding="10dp"
+                                android:layout_width="match_parent"
+                                android:orientation="horizontal"
+                                android:layout_height="match_parent">
+
+                                <ImageView
+                                    android:layout_gravity="center"
+                                    android:src="@mipmap/ic_launcher"
+                                    android:layout_width="60dp"
+                                    android:scaleType="centerCrop"
+                                    android:layout_height="60dp"/>
+
+
+                                <LinearLayout
+                                   android:gravity="center_vertical"
+                                    android:layout_marginLeft="8dp"
+                                    android:orientation="vertical"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
+                                    android:layout_height="match_parent">
+                                    
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:text="羊宝宝|管理员"
+                                        android:layout_height="wrap_content"/>
+
+                                    <TextView
+                                        android:layout_marginTop="5dp"
+                                        android:text="上海国烨跨境电子商务有限公司"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"/>
+                                    
+                                </LinearLayout>
+
+
+                            </LinearLayout>
+
+                        </android.support.v7.widget.CardView>
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="0dp">
+
+                <android.support.v7.widget.CardView
+                    android:elevation="100dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="5dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="32dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <com.guoyie.www.delivery.easy.widget.recyclerview.NRecyclerView
+                        android:id="@+id/recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+
 
     </LinearLayout>
 
