--- a/app/src/main/res/layout/fc_storehouse.xml
+++ b/app/src/main/res/layout/fc_storehouse.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,11 +20,7 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <TextView
-                android:gravity="center"
-                android:text="我的仓储"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+
 
     </LinearLayout>
     </LinearLayout>
