--- a/app/src/main/res/layout/public_title_bar.xml
+++ b/app/src/main/res/layout/public_title_bar.xml
@@ -46,6 +46,22 @@
             android:textColor="@color/white"
             android:textSize="15sp" />
 
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:src="@mipmap/search"
+            android:visibility="gone"
+             />
+
+
     </RelativeLayout>
 
 
