--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,8 +45,197 @@
         </android.support.v7.widget.Toolbar>
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="成功入住即可享受交割易提供的免费客户\n资源及撮合业务"
+            android:gravity="center_horizontal"
+            android:textColor="#333333"
+            android:textSize="11sp"
+            android:layout_below="@id/toolbar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="38dp"/>
+        <LinearLayout
+            android:id="@+id/ll_companyname"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/tv_title"
+            android:layout_marginTop="38dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_companyname"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="企业名称"
+                android:paddingLeft="10dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_companyname"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_contacts"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="联系人"
+                android:paddingLeft="10dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_contactway"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_contacts"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_contactway"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="联系方式"
+                android:paddingLeft="10dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_telephone"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_contactway"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_telephone"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="座机"
+                android:paddingLeft="10dp"/>
+            <!--用于占位，使上下边框保持长度一致-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_qq"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_telephone"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_qq"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="QQ"
+                android:paddingLeft="10dp"/>
+            <!--用于占位，使上下边框保持长度一致-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_email"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_qq"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="@drawable/input_bg"
+                android:hint="邮箱"
+                android:paddingLeft="10dp"/>
+            <!--用于占位，使上下边框保持长度一致-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_commit"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_below="@id/ll_email"
+            android:layout_marginTop="19dp"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/bt_commit"
+                android:layout_width="0dp"
+                android:layout_weight="20"
+                android:layout_height="match_parent"
+                android:background="#497AF8"
+                android:text="提交"
+                android:textColor="#fff"
+                android:enabled="true"/>
+            <!--用于占位，使上下边框保持长度一致-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@color/app_rea_color"
+                android:gravity="center"/>
+        </LinearLayout>
     </RelativeLayout>
 </layout>
