--- a/app/src/main/res/layout/commit_dialog.xml
+++ b/app/src/main/res/layout/commit_dialog.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/alertdialog_bg">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +28,7 @@
         android:textColor="#3C3F41"
         android:textSize="20sp"
         android:text="上海国烨跨境电子商务有限公司"/>
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"
@@ -86,7 +88,7 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"
@@ -145,7 +147,7 @@
                 />
         </RelativeLayout>
     </RelativeLayout>
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"
@@ -168,7 +170,7 @@
         android:textColor="#3C3F41"
         android:layout_marginLeft="20dp" />
 
-    <view
+    <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"
@@ -179,22 +181,25 @@
         android:layout_height="40dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_cancel"
             android:layout_width="0dp"
             android:layout_weight="100"
             android:layout_height="wrap_content"
             android:text="取消"
             android:textSize="24sp"
             android:gravity="center"/>
-        <view
-            android:layout_width="0dp"
+        <View
+            android:layout_width="1dp"
             android:layout_height="40dp"
             android:background="#999999" />
         <TextView
+            android:id="@+id/tv_sure"
             android:layout_width="0dp"
             android:layout_weight="100"
             android:layout_height="wrap_content"
             android:text="确定"
             android:textSize="24sp"
+            android:textColor="@color/app_button_blue"
             android:gravity="center"/>
     </LinearLayout>
 </LinearLayout>
