--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
-                    android:id="@+id/tv_cancel"
+                    android:id="@+id/tv_toolbarcancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="取消"
@@ -32,7 +32,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"/>
                 <TextView
-                    android:id="@+id/tv_commit"
+                    android:id="@+id/tv_toolbarcommit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="提交"
