--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -225,10 +225,10 @@
                 android:layout_width="0dp"
                 android:layout_weight="20"
                 android:layout_height="match_parent"
-                android:background="#497AF8"
+                android:background="@drawable/commitbutton_bg"
                 android:text="提交"
                 android:textColor="#fff"
-                android:enabled="true"/>
+                android:enabled="false"/>
             <!--用于占位，使上下边框保持长度一致-->
             <TextView
                 android:layout_width="0dp"
