--- a/app/src/main/res/layout/fc_usercenter.xml
+++ b/app/src/main/res/layout/fc_usercenter.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#F1F4FE">
 
         <include
             android:id="@+id/title_bar"
@@ -16,14 +18,157 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:gravity="center"
-                android:text="用户中心"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="200dp"
+                android:background="@mipmap/background">
+
+                <com.guoyie.www.delivery.easy.widget.MyImageView
+                    android:id="@+id/icon"
+                    android:layout_height="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_marginTop="28dp"
+                    android:src="@mipmap/guide_1"
+                    android:scaleType="centerCrop"
+                    app:ratio="1"
+                    android:layout_centerHorizontal="true"/>
+                <LinearLayout
+                    android:id="@+id/ll_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/icon"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="28dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tv_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="羊宝宝"
+                        android:textSize="15sp"
+                        android:textColor="#fff"/>
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="15dp"
+                        android:background="#fff"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="管理员"
+                        android:textSize="11sp"
+                        android:textColor="#fff"/>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/ll_name"
+                    android:layout_marginTop="12dp"
+                    android:layout_centerHorizontal="true"
+                    android:text="上海国烨跨境电子商务有限公司"
+                    android:textColor="#fff"
+                    android:textSize="15sp"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#fff">
+                <ImageView
+                    android:id="@+id/iv_about"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/about"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="18dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="关于交割易"
+                    android:layout_centerVertical="true"
+                    android:textSize="15sp"
+                    android:textColor="#333333"
+                    android:layout_toRightOf="@id/iv_about"
+                    android:layout_marginLeft="28dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/right"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="310dp"
+                android:layout_height="2dp"
+                android:layout_gravity="right"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#fff">
+                <ImageView
+                    android:id="@+id/iv_contact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/contact"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="18dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="联系客服"
+                    android:layout_centerVertical="true"
+                    android:textSize="15sp"
+                    android:textColor="#333333"
+                    android:layout_toRightOf="@id/iv_contact"
+                    android:layout_marginLeft="28dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/right"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="310dp"
+                android:layout_height="2dp"
+                android:layout_gravity="right"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#fff">
+                <ImageView
+                    android:id="@+id/iv_pull_out"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/pull_out"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="18dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="退出登录"
+                    android:layout_centerVertical="true"
+                    android:textSize="15sp"
+                    android:textColor="#333333"
+                    android:layout_toRightOf="@id/iv_pull_out"
+                    android:layout_marginLeft="28dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/right"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"/>
+            </RelativeLayout>
 
     </LinearLayout>
     </LinearLayout>
