--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -24,6 +24,6 @@
             android:layout_marginBottom="40dp"
             android:textSize="22sp"
             android:textColor="#fff"
-            />
+            android:background="#7D97FA"/>
     </RelativeLayout>
 </layout>
