--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:padding="15dp">
 
-    <com.chinayie.cloudmanager.widget.PictureSpinView
+    <com.guoyie.www.delivery.easy.widget.PictureSpinView
         android:layout_width="30dp"
         android:layout_height="30dp" />
 
