--- a/app/src/main/res/layout/fc_storehouse.xml
+++ b/app/src/main/res/layout/fc_storehouse.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#F1F4FE">
 
         <include
             android:id="@+id/title_bar"
@@ -14,15 +15,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <LinearLayout
+        <com.guoyie.www.delivery.easy.widget.SwipeRefreshLayoutt
+            android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp">
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.guoyie.www.delivery.easy.widget.recyclerview.NRecyclerView
+                    android:id="@+id/nrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
+
+        </com.guoyie.www.delivery.easy.widget.SwipeRefreshLayoutt>
 
 
 
-    </LinearLayout>
     </LinearLayout>
 
     </layout>
